perf(code):修改代码片段字体；

--- a/docs/.vitepress/assets/styles/reset.less
+++ b/docs/.vitepress/assets/styles/reset.less
@@ -11,5 +11,6 @@ html,body {
 
 pre,
 code {
-  font-size: 13px !important; /* 将这里的数值替换为你希望的字体大小 */
+  font-size: 14px !important; /* 将这里的数值替换为你希望的字体大小 */
+  font-family: ui-monospace, SFMono-Regular, 'SF Mono', Menlo, Monaco, Consolas, 'Liberation Mono', 'Courier New', monospace !important;
 }
